--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,4 @@
+/*# sourceMappingURL=app.component.css.map */
 p {
     font-family: Lato;
 }
@@ -9,11 +10,11 @@ canvas {
 }
 
 div {
-    height: 500px;
-    width: 1000px
+    height: 600px;
+    width: 1500px
 }
 
 .gcode-preview {
-    width: 40vw;
+    width: 50vw;
     margin: auto;
 }
